# group_16_tame_your_files

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _quarto.yml  environment.yml  index.html  pyproject.toml  search.json
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: build.yml  codecov.yml  deploy.yml  docs.yml  quarto-publish.yml  release.yml
docs/: _quarto.yml  conf.py  index.html  index.md  index.qmd  objects.json  search.json
docs/_site/: index.html  search.json
docs/_site/reference/: FileInfo.html  api.html  create_treemap_figure.html  files_to_free_space.html  find_duplicates_by_content.html  find_duplicates_by_name.html  find_duplicates_by_size.html  get_directory_data.html  largest_files.html  tame_your_files.html
docs/_site/site_libs/bootstrap/: bootstrap-b95edc83dea65da536d2b89571913ed5.min.css
docs/reference/: FileInfo.html  api.qmd  create_treemap_figure.html  files_to_free_space.html  find_duplicates_by_content.html  find_duplicates_by_name.html  find_duplicates_by_size.html  get_directory_data.html  largest_files.html  tame_your_files.html
notebooks/: file_size_utilities_demo.ipynb
reference/: FileInfo.html  FileInfo.qmd  create_treemap_figure.html  create_treemap_figure.qmd  files_to_free_space.html  files_to_free_space.qmd  find_duplicates_by_content.html  find_duplicates_by_content.qmd  find_duplicates_by_name.html  find_duplicates_by_name.qmd  find_duplicates_by_size.html  find_duplicates_by_size.qmd  get_directory_data.html  get_directory_data.qmd  largest_files.html  largest_files.qmd  tame_your_files.html  tame_your_files.qmd
site_libs/bootstrap/: bootstrap-405a918baa96428b669f014337117059.min.css
src/tame_your_files/: __init__.py  file_size_utilities.py  find_duplicates.py  visualize_dir.py
tests/: test_file_size_utilities.py
tests/integration/: test_file_size_utilities.py
tests/unit/: test_example.py  test_file_size_utilities  test_find_duplicates.py  test_visualize_dir.py
